websocket-app-in-istio/k8-manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: websocket-test
  labels:
    istio.io/rev: 1-24-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-ws-echo
  namespace: websocket-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-ws-echo
  template:
    metadata:
      labels:
        app: py-ws-echo
    spec:
      containers:
      - name: app
        image: devogopan/websocket-echo:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: py-ws-echo
  namespace: websocket-test
spec:
  selector:
    app: py-ws-echo
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
